objects/EUR_CRM_CT_Menu_Feature__mdt.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_Child_Fields_API_Name__c</fullName>
        <label>Child Fields API Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Child_Object_API_Name__c</fullName>
        <label>Child Object API Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Child_Object_Read_Only_Fields__c</fullName>
        <label>Child Object Read Only Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Child_Object_Required_Fields__c</fullName>
        <label>Child Object Required Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Color_Identificator_Codes__c</fullName>
        <label>Color Identificator Codes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Color_Identificator_Field__c</fullName>
        <label>Color Identificator Field</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Color_Identificator_Values__c</fullName>
        <label>Color Identificator Values</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Copy_from_HO_option__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copy from HO option</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Country_Code__c</fullName>
        <label>Country Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Display_Details__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Parent_Fields_API_Name__c</fullName>
        <label>Parent Fields API Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Parent_Lookup_Field__c</fullName>
        <label>Parent Lookup Field</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Parent_Object_API_Name__c</fullName>
        <label>Parent Object API Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Parent_Object_Read_Only_Fields__c</fullName>
        <label>Parent Object Read Only Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Parent_Object_Record_Type__c</fullName>
        <description>Record Type developer name</description>
        <label>Parent Object Record Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Parent_Object_Required_Fields__c</fullName>
        <label>Parent Object Required Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Product_List_Creation_Type__c</fullName>
        <label>Product List Creation Type</label>
        <type>TextArea</type>
    </fields>
    <label>CT Menu Feature</label>
    <pluralLabel>CT Menu Features</pluralLabel>
</CustomObject>